--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,149 @@
 /* You can add global styles to this file, and also import other style files */
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+@import "app/styles/variables.scss";
+@import "app/styles/mixins.scss";
+
+body {
+    font-family: 'Montserrat', sans-serif;
+    background-color: $background;
+    scroll-behavior: smooth;
+}
+
+*{
+  color: $text1;
+  margin: 0;
+  padding: 0;
+}
+
+.black-btn{
+  color: $background;
+  background-color: $text1;
+  border: none;
+  font-weight: bold;
+  padding: 10px 20px;
+  cursor: pointer;
+  //disabled
+  border:2px solid $text1;
+  &.disabled{
+    opacity: 0.5;
+    cursor:default;
+  }
+  &:hover{
+    background-color: $background;
+    color: $text1;
+    border: 2px solid $text1;
+  }
+}
+
+.white-btn{
+    padding: 10px 20px;
+    cursor: pointer;
+    background-color: $background;
+    border: 2px solid $text1;
+    color: $text1;
+    transition: all 0.7s ease;
+    &:hover{
+        background-color: $text1;
+        color: $background;
+    }
+
+}
+
+
+.hover-scale{
+  transition: ease 0.2s;
+  &:hover{
+    transform: scale(1.05);
+  }
+}
+
+
+.fixed-logo-left{
+  position: fixed;
+  left: 10px;
+  top: 10px;
+  max-width: 100px;
+  max-height: 100px;
+  cursor: pointer;
+}
+
+.fullscreen-center{
+  width: 100%;
+  height: calc(100vh - $nav-height);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+form{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  padding: 5px;  
+  gap:1rem;
+}
+
+input,select{
+  border: none;
+  border: 2px solid $text1;
+  background-color: transparent;
+  color: $text1;
+  font-size: 1.2rem;
+  padding: 5px;
+  outline: none;
+  width: calc(100% - 12px);
+}
+
+input[type="submit"], button[type="submit"]{
+  background-color: $text1;
+  color: $background;
+  font-size: 1.2rem;
+  padding: .5rem 2rem;
+  outline: none;
+  border: 0;
+  cursor: pointer;
+
+  //disabled
+  &:disabled,&[disabled]{
+    opacity: 0.5;
+    cursor:default;
+  }
+}
+
+.flex-row, .flex-col{
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  gap: 1rem;
+}
+
+.flex-col{
+  flex-direction: column;
+}
+
+.selectDisable {
+  -webkit-user-select: none;
+  -khtml-user-select: none;
+  -moz-user-select: none;
+  -o-user-select: none;
+  user-select: none;
+}
+
+.green{
+  color:$green;
+}
+
+.red{
+  color:$red;
+}
+
+.illustration{
+    width: 50vw;
+    max-width: 500px;
+
+    @include width-under(600px){
+        display: none;
+    }
+}
