--- a/src/app/views/home/home.component.html
+++ b/src/app/views/home/home.component.html
@@ -1,1 +1,5 @@
-<p>home works!</p>
+<section class="flex-col">
+    <h1>HDLT</h1>
+    <img src="assets/illustrations/undraw_beer_xg5f.svg" alt="">
+    <p>L'heure de la tournée, un mode de vie</p>
+</section>
