--- a/src/app/components/nav/nav.component.html
+++ b/src/app/components/nav/nav.component.html
@@ -1,7 +1,10 @@
 <nav>
     <!-- Logo & user type -->
-    <div class="left">
-        <a routerLink="/" class="logo" >HDLT</a>
+    <div class="left flex-col">
+        <a routerLink="/" class="logo flex-col" >
+            <span>Heure de la tournée</span>
+            <span class="small">Tu changes de statut, tu payes</span>
+        </a>
     </div>
 
     <!-- Connected -->
