--- a/src/app/views/rules/rules.component.html
+++ b/src/app/views/rules/rules.component.html
@@ -1,4 +1,5 @@
 <section class="flex-col">
+    <h1>Rules</h1>
     <article>
         <h4>Article 1.</h4>
         <p>Je resterais toujours fidèle à la tournée.</p>
