--- a/src/styles.scss
+++ b/src/styles.scss
@@ -93,6 +93,10 @@ input,select{
   padding: 5px;
   outline: none;
   width: calc(100% - 12px);
+  -ms-box-sizing:content-box;
+  -moz-box-sizing:content-box;
+  -webkit-box-sizing:content-box; 
+  box-sizing:content-box;
 }
 
 input[type="submit"], button[type="submit"]{
