--- a/src/app/views/signup/signup.component.html
+++ b/src/app/views/signup/signup.component.html
@@ -1,6 +1,7 @@
 <div class="fullscreen-center" style="gap:2rem">
     <form [formGroup]="signupForm">
         <h1>Sign-up</h1>
+        <input type="text" formControlName="username" id="username" placeholder="username">
         <input type="email" formControlName="email" class="form-control" id="email" placeholder="Enter email">
         <input type="password" formControlName="password" class="form-control" id="password" placeholder="Password">
         <input type="password" formControlName="passwordVerification" class="form-control" id="password" placeholder="Confirm password">
