--- a/src/app/views/ongoing/ongoing.component.html
+++ b/src/app/views/ongoing/ongoing.component.html
@@ -6,7 +6,7 @@
             <p id="name">"{{status.name}}"</p>
         </div>
         <div>
-            <button class="white-btn">Payée !</button>
+            <button class="white-btn" (click)="Payed(status)">Payée !</button>
         </div>
 
     </article>
