--- a/src/app/views/ongoing/ongoing.component.html
+++ b/src/app/views/ongoing/ongoing.component.html
@@ -1,4 +1,6 @@
 <section class="flex-col">
+    <h2 *ngIf="ongoing.length==0">Rien en cours... On a soif !</h2>
+    <h2 *ngIf="ongoing.length!=0"> {{ongoing.length}} tournée en attente</h2>
     <article *ngFor="let status of ongoing" class="flex-row">
         <div>
             <h2>{{status.username}} <span id="date">- {{status.date.toLocaleDateString("fr")}}</span> </h2>
