--- a/src/app/views/new-status/new-status.component.html
+++ b/src/app/views/new-status/new-status.component.html
@@ -1,7 +1,7 @@
 <div class="fullscreen-center" style="gap:2rem">
     <form [formGroup]="statusForm">
         <h1>New Status</h1>
-        <input type="text" formControlName="name" class="form-control" id="email" placeholder="Status ?">
+        <input type="text" formControlName="name" class="form-control" id="email" placeholder="Nom/Description">
         <select formControlName="type" id="" placeholder="status type">
             <option *ngFor="let type of types" [value]="type.id">{{type.name}}</option>
         </select>
