--- a/src/app/views/ongoing/ongoing.component.html
+++ b/src/app/views/ongoing/ongoing.component.html
@@ -2,14 +2,13 @@
     <h2 *ngIf="ongoing.length==0">Rien en cours... On a soif !</h2>
     <h2 *ngIf="ongoing.length!=0"> {{ongoing.length}} tournée en attente</h2>
     <article *ngFor="let status of ongoing" class="flex-row">
-        <div>
+        <div class="content">
             <h2>{{status.username}} <span id="date">- {{status.date.toLocaleDateString("fr")}}</span> </h2>
             <p id="type">{{status.type}}</p>
             <p id="name">"{{status.name}}"</p>
         </div>
-        <div>
-            <button class="white-btn" (click)="Payed(status)">Payée !</button>
-        </div>
+        <button class="white-btn" (click)="Payed(status)">Payée !</button>
+        <!-- *ngIf="IsUserStatus(status)" -->
 
     </article>
 
