no commented out it's better
user can only mark his/her status payed

--- a/src/app/views/ongoing/ongoing.component.html
+++ b/src/app/views/ongoing/ongoing.component.html
@@ -7,9 +7,7 @@
             <p id="type">{{status.type}}</p>
             <p id="name">"{{status.name}}"</p>
         </div>
-        <button class="white-btn" (click)="Payed(status)">Payée !</button>
-        <!-- *ngIf="IsUserStatus(status)" -->
-
+        <button *ngIf="IsUserStatus(status)" class="white-btn" (click)="Payed(status)">Payée !</button>
     </article>
 
 </section>
