--- a/src/app/components/user-card/user-card.component.scss
+++ b/src/app/components/user-card/user-card.component.scss
@@ -1,10 +1,11 @@
 @import "src/app/styles/variables.scss";
-
+@import "src/app/styles/mixins.scss";
 .user-card{
+    position: initial;
     border:2px solid $text1-20;
     padding: .5rem;
     border-radius: 5px;
-
+    transition: all .2s ease-in-out;
 }
 
 h2{
@@ -12,11 +13,40 @@ h2{
     font-weight: 500;
     margin-bottom: .5rem;
 }
+p{
+    text-align: center;
+}
 
 .status-container{
     width: 100%;
     gap: .2rem;
+    height: 200px;
+
+    @include width-under(800px){
+        height:fit-content;
+    }
+
     justify-content: flex-start;
+
+    overflow-y: scroll;
+    scrollbar-width: 5px;
+    scrollbar-color: $text1 white;
+
+     /* width */
+    &::-webkit-scrollbar {
+        width: 5px;
+    }
+    
+    /* Track */
+    &::-webkit-scrollbar-track {
+        box-shadow: inset 0 0 5px white;
+    }
+  
+    /* Handle */
+    &::-webkit-scrollbar-thumb {
+        background: $text1;
+    } 
+
     app-status-small-card{
         width: 100%;
     }
