--- a/src/app/components/user-card/user-card.component.scss
+++ b/src/app/components/user-card/user-card.component.scss
@@ -12,6 +12,8 @@ h2{
     font-size: 2rem;
     font-weight: 500;
     margin-bottom: .5rem;
+    text-transform: capitalize;
+
 }
 p{
     text-align: center;
