--- a/src/app/views/ongoing/ongoing.component.scss
+++ b/src/app/views/ongoing/ongoing.component.scss
@@ -1,6 +1,7 @@
 
 section{
     width: 100%;
+    padding-bottom: 2rem;
     article{
         justify-content: space-between;
         width: calc(100% - 1rem);
@@ -8,6 +9,8 @@ section{
         gap:.5rem;
         h2{
             font-weight: 500;
+            text-transform: capitalize;
+
         }
         #date{
             font-size: .9rem;
