--- a/src/app/components/status-small-card/status-small-card.component.scss
+++ b/src/app/components/status-small-card/status-small-card.component.scss
@@ -1,3 +1,6 @@
+@import "src/app/styles/variables.scss";
+
+
 .flex-col{
     gap:.2rem;
     width: 100%;
@@ -13,7 +16,6 @@
     width: 100%;
     justify-content: space-between;
     cursor: pointer;
-
 }
 
 #type{
