--- a/src/app/views/ongoing/ongoing.component.scss
+++ b/src/app/views/ongoing/ongoing.component.scss
@@ -1,3 +1,4 @@
+@import "src/app/styles/variables.scss";
 
 section{
     width: 100%;
@@ -7,6 +8,11 @@ section{
         width: calc(100% - 1rem);
         max-width: 500px;
         gap:.5rem;
+        padding: .5rem;
+        border-radius: 5px;
+        
+        box-shadow: 0 0 10px 0 rgba(0,0,0,0.2);
+        background-color: $background;
         h2{
             font-weight: 500;
             text-transform: capitalize;
