--- a/src/app/components/quote-card/quote-card.component.scss
+++ b/src/app/components/quote-card/quote-card.component.scss
@@ -7,6 +7,7 @@
     align-items: flex-end;
     background-color: $background;
     box-shadow: 0 0 10px 0 rgba(0,0,0,0.2);
+    width: 100%;
     p{
         font-size: 1.3rem;
     }
