--- a/src/app/views/quotes/quotes.component.scss
+++ b/src/app/views/quotes/quotes.component.scss
@@ -12,3 +12,12 @@ app-quote-card{
     width: 80%;
     max-width: 800px;
 }
+
+input{
+    width: 80%;
+    max-width: 500px;
+    border:0;
+    box-shadow: 0 0 10px 0 rgba(0,0,0,0.2);
+    padding: .5rem;
+    border-radius: 5px;
+}
