--- a/src/app/styles/variables.scss
+++ b/src/app/styles/variables.scss
@@ -1,17 +1,18 @@
 // colors
 $background: #ffffff;
 $text1: #000000;
-$text2: #434A42;
-$red: #7F1919;
-$green: #6A8550;
-$yellow: #e0ba46;	
-$accent: #2E3EC9;
+$text2: #434a42;
+$red: #7f1919;
+$green: #6a8550;
+$yellow: #e0ba46;
+$accent: #2e3ec9;
 $blue: #5d64a4;
 
 $nav-height: 50px;
 
 $background-60: hsla(47, 45%, 90%, 0.6);
-$background-light:#F8F6ED;
+$background-light: #f8f6ed;
+$background-dark: #efefef;
 
 $text1-07: hsla(0, 0%, 0%, 0.07);
 $text1-20: hsla(0, 0%, 0%, 0.2);
