--- a/src/app/views/history/history.component.html
+++ b/src/app/views/history/history.component.html
@@ -1,3 +1,8 @@
-<section class="flex-row">
-    <app-user-card *ngFor="let user of users" [username]="user" [status]="history[user]" class="card"></app-user-card>
+<section class="flex-row center">
+  <app-user-card
+    *ngFor="let user of users"
+    [username]="user"
+    [status]="history[user]"
+    class="card"
+  ></app-user-card>
 </section>
