--- a/src/app/views/home/home.component.html
+++ b/src/app/views/home/home.component.html
@@ -1,5 +1,5 @@
-<section class="flex-col">
-    <h1>HDLT</h1>
-    <img src="assets/illustrations/undraw_beer_xg5f.svg" alt="">
-    <p>L'heure de la tournée, un mode de vie</p>
+<section class="flex-col center">
+  <h1>HDLT</h1>
+  <img src="assets/illustrations/undraw_beer_xg5f.svg" alt="" />
+  <p>L'heure de la tournée, un mode de vie</p>
 </section>
