--- a/src/app/components/quote-card/quote-card.component.scss
+++ b/src/app/components/quote-card/quote-card.component.scss
@@ -25,9 +25,13 @@
   left: 0.2rem;
   bottom: 0.2rem;
   font-size: 1.3rem;
+  gap: 0;
+  p {
+    padding: 0 0.2rem;
+    cursor: pointer;
+  }
   .mine {
     background-color: #dfeffffe;
     border-radius: 5px;
-    cursor: pointer;
   }
 }
