feat: custom alerte

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,9 +1,5 @@
 <app-nav></app-nav>
-<img id="background" src="assets/background.svg" alt="">
-<!-- <svg id="background" preserveAspectRatio="none" viewBox="0 0 960 540" width="960" height="540" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1">
-    <path d="M0 292L137 292L137 247L274 247L274 284L411 284L411 254L549 254L549 340L686 340L686 257L823 257L823 288L960 288L960 283L960 541L960 541L823 541L823 541L686 541L686 541L549 541L549 541L411 541L411 541L274 541L274 541L137 541L137 541L0 541Z" fill="#f5f5f5"></path>
-    <path d="M0 330L137 330L137 320L274 320L274 360L411 360L411 387L549 387L549 410L686 410L686 400L823 400L823 348L960 348L960 417L960 541L960 541L823 541L823 541L686 541L686 541L549 541L549 541L411 541L411 541L274 541L274 541L137 541L137 541L0 541Z" fill="#f2f2f2"></path>
-    <path d="M0 420L137 420L137 438L274 438L274 399L411 399L411 409L549 409L549 457L686 457L686 482L823 482L823 429L960 429L960 414L960 541L960 541L823 541L823 541L686 541L686 541L549 541L549 541L411 541L411 541L274 541L274 541L137 541L137 541L0 541Z" fill="#dadada"></path>
-</svg> -->
+<img id="background" src="assets/background.svg" alt="" />
 <router-outlet></router-outlet>
 <app-toast></app-toast>
+<app-modal-injector></app-modal-injector>
