--- a/src/styles.scss
+++ b/src/styles.scss
@@ -3,6 +3,7 @@
 @import "app/styles/variables.scss";
 @import "app/styles/mixins.scss";
 @import "app/styles/layout.scss";
+@import "app/styles/sk-design-system.scss";
 
 body {
   font-family: "Montserrat", sans-serif;
