--- a/src/app/styles/variables.scss
+++ b/src/app/styles/variables.scss
@@ -10,6 +10,9 @@ $blue: #5d64a4;
 
 $nav-height: 50px;
 
+$primary: #16151e;
+$secondary: #f2f2f2;
+
 $background-60: hsla(47, 45%, 90%, 0.6);
 $background-light: #f8f6ed;
 $background-dark: #efefef;
@@ -17,3 +20,6 @@ $background-dark: #efefef;
 $text1-07: hsla(0, 0%, 0%, 0.07);
 $text1-20: hsla(0, 0%, 0%, 0.2);
 $text1-50: hsla(0, 0%, 0%, 0.5);
+
+$radius: 0.5rem;
+$shadow: 0 0.2rem 0.5rem rgba(0, 0, 0, 0.05);
